# seniorpw

./: .gitlab-ci.yml  Makefile  PKGBUILD  README.md  flake.nix
other/: generate-compare-table.py
src/: seniormenu
src/completions/: senior.bash  senior.zsh
src/importers/: keepass2seniorpw.py  pass2seniorpw.py
src/seniorpw/: Cargo.toml  build.rs
src/seniorpw/.cargo/: config.toml
src/seniorpw/src/: cli.rs  lib.rs  main.rs
