[package]
name = "senior"
version = "0.8.2"
edition = "2024"
default-run = "senior"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "senior"
path = "src/main.rs"

[dependencies]
age = { version = "0.11", features = ["ssh"] }
atty = "0.2"
base32 = "0.5"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
grep = "0.4"
interprocess = "2.2"
rpassword = "7.3"
sysinfo = "0.37"
tempfile = "3.23"
termcolor = "1.4"
thotp = "0.1"
walkdir = "2.5"
whoami = "1.5.2"

[build-dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
clap_complete = "4.5"
clap_mangen = "0.2"
